# docx-bulk-editor

./: .coveragerc  .gitignore  .pylintrc  CLAUDE.md  CLAUDE_CODE_SETUP.md  README.md  TESTING_QUICK_START.md  config.json  docx_bulk_editor.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  test_bug.docx
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: shading-research.md  textbox-shading-research.md
.planning/sessions/: 1852939a-a5d0-4afa-868a-1d510ba78b97.json  1f6bfbc9-bbf8-4322-bf1e-3870d462b94d.json  46f221a9-350b-4015-9793-749146f9bdd5.json
src/: __init__.py  main.py
src/core/: __init__.py  backup.py  config.py  logger.py
src/database/: __init__.py  db_manager.py  migrate_add_duration.py
src/processors/: __init__.py  metadata.py  search_replace.py  shading_remover.py  style_enforcer.py  table_formatter.py  validator.py
src/ui/: __init__.py  history_window.py  main_window.py  progress_dialog.py  settings_dialog.py
src/workers/: __init__.py  job_worker.py
tests/: README.md  conftest.py
tests/gui/: test_history_window.py  test_main_window.py  test_progress_dialog.py
tests/integration/: test_core_infrastructure.py
tests/performance/: test_processing_speed.py
tests/test_documents/: clean_validation_doc.docx  create_specialized_test_docs.py  create_test_docs.py  empty_doc.docx  empty_paragraphs_doc.docx  simple_doc.docx  (+17 more)
(+66 files in other folders)
