[project]
name = "docx-bulk-editor"
version = "1.0.0"
description = "Lightweight Windows desktop app for batch processing DOCX documents"
requires-python = ">=3.11"
authors = [{name = "DOCX Bulk Editor Team"}]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/yourusername/docx-bulk-editor"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=src --cov-report=html --cov-report=term"
